--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@ html {
   left: 0;
 }
 
+#header .logo{
+  height: 60px;
+  width: 250px;
+}
+
 #navbar{
   display: flex;
   align-items: center;
